src/web/EnrichedTextInput.css
.tiptap.ProseMirror p {
  margin-top: 0;
  margin-bottom: 0;
}

.tiptap.ProseMirror-focused {
  outline: none;
}

.eti-editor p.is-editor-empty:first-child::before {
  color: #adb5bd;
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

.eti-editor code {
  font-family: monospace;
  background-color: var(--eti-code-bg-color);
  color: var(--eti-code-color);
  padding: 2px 4px;
}

